force-app/main/default/objects/Account/fields/lang__c.field-meta.xml
<CustomField>
    <fullName>lang__c</fullName>
    <label>lang</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>