force-app/main/default/objects/Account/fields/Match_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if user check this it will fill the same postal code in shipping address</description>
    <label>Match Billing Address</label>
    <type>Checkbox</type>
</CustomField>