force-app/main/default/objects/Account/fields/test_list__c.field-meta.xml
<CustomField>
    <fullName>test_list__c</fullName>
    <label>test_list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
                <default>true</default>
                <label>January</label>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>